# based-ten

./: .env  .gitignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  knexfile.ts  package-lock.json  package.json  todo.txt  tsconfig.json
client/: .env  .prettierrc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/.next/: trace
client/services/: api.ts  api.types.ts  queries.ts
client/src/: store.ts
config/: default.json
lib/: db.ts
migrations/: 20240614230811_anime.ts  20240614231005_movies.ts  20240614231018_songs.ts  20240614231040_video-games.ts  20240706170131_init.down.sql  20240706170131_init.up.sql
prisma/: schema.prisma  seed.ts
public/: index.html
seed/: Cargo.toml
seed/data/: list-items.csv  songs.csv
seed/src/: main.rs  models.rs  utils.rs
seed/src/data/: group-members.csv  likes.csv  list-items.csv  users.csv
seed/src/data/dev/: 1.anime.csv  10.follows.csv  11.likes.csv  4.users.csv  6.groups.csv  7.lists.csv  group-members.csv  list-items.csv  lists.csv  movies.csv  video-games.csv
seed/src/data/prod/: 11.likes.csv  2.movies.csv  3.songs.csv  6.groups.csv  8.group-members.csv  9.list-items.csv  anime.csv  animes.csv  follows.csv  group-members.csv  likes.csv  list-items.csv  lists.csv  movies.csv  songs.csv  users.csv  video-games.csv
seed/src/data/production-data/: animes.csv  follows.csv  movies.csv  songs.csv  video-games.csv
seed/src/models/: list_type.rs  lists.rs  media.rs  traits.rs  users.rs
services/: anime.service.ts
sql/: get_media_by_type.sql
sql/anime/: createTables.sql  dropTables.sql  populateTables.sql
sql/feature1/: 1a.sql  1b.sql  1c_sample.sql
sql/feature2/: 2_prod.out  2_prod.sql  2_sample.out  2_sample.sql
sql/feature3/: 3_prod.out  3_prod.sql  3_sample.out  3_sample.sql
sql/feature4/: 4_prod.out  4_prod.sql  4_sample.out  4_sample.sql
sql/feature5/: 5_prod.out  5_prod.sql  5_sample.out  5_sample.sql  explore_lists.sql
sql/feature6/: 6_prod.out  6_prod.sql  6_sample.out  6_sample.sql
sql/movies/: createTables.sql  dropTables.sql  populateTables.sql
sql/sample/: anime.txt  createTables.sql  dropTables.sql  movies.txt  populateTables.sql  songs.txt  videoGames.txt
sql/songs/: createTables.sql  dropTables.sql  (+2 more)
src/: .gitignore  app.ts  channels.ts  client.ts  configuration.ts  declarations.ts  env.ts  handlers.rs  index.ts  main.rs  middleware.rs  models.rs  postgresql.ts  routes.rs  services.rs  utils.rs  validators.ts
test/: app.test.ts  client.test.ts
types/: anime.ts  games.ts  media.ts  movies.ts  song.ts
(+272 files in other folders)
