[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "time"] }
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
