[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "time"] }
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
